@@ -1,4 +1,5 @@
 use strict;
+use Cwd;
 use OpenGuides;
 use OpenGuides::Test;
 use Test::More;
@@ -7,10 +8,11 @@ eval { require DBD::SQLite; };
 if ( $@ ) {
     plan skip_all => "DBD::SQLite not installed - no database to test with";
 } else {
-    plan tests => 1;
+    plan tests => 4;
 }
 
 my $config = OpenGuides::Test->make_basic_config;
+$config->custom_template_path( cwd . "/t/templates/" );
 my $guide = OpenGuides->new( config => $config );
 my $wiki = $guide->wiki;
 
@@ -20,12 +22,55 @@ foreach my $del_node ( $wiki->list_all_nodes ) {
     $wiki->delete_node( $del_node ) or die "Can't delete $del_node";
 }
 
+# Write a custom template to autofill content in autocreated nodes.
+eval {
+    unlink cwd . "/t/templates/custom_autocreate_content.tt";
+};
+open( FILE, ">", cwd . "/t/templates/custom_autocreate_content.tt" )
+  or die $!;
+print FILE <<EOF;
+Auto-generated list of places in
+[% IF index_type == "Category" %]this category[% ELSE %][% index_value %][% END %]:
+\@INDEX_LIST [[[% node_name %]]]
+EOF
+close FILE or die $!;
+
 # Check that autocapitalisation works correctly in categories with hyphens.
 OpenGuides::Test->write_data(
                               guide => $guide,
                               node  => "Vivat Bacchus",
                               categories => "Restaurants\r\nVegan-friendly",
+                              locales => "Farringdon",
                             );
 
 ok( $wiki->node_exists( "Category Vegan-Friendly" ),
     "Categories with hyphens in are auto-created correctly." );
+
+# Check that the custom autocreate template was picked up.
+my $content = $wiki->retrieve_node( "Category Vegan-Friendly" );
+$content =~ s/\s+$//s;
+$content =~ s/\s+/ /gs;
+is( $content, "Auto-generated list of places in this category: "
+              . "\@INDEX_LIST [[Category Vegan-Friendly]]",
+    "Custom autocreate template works properly for categories" );
+
+$content = $wiki->retrieve_node( "Locale Farringdon" );
+$content =~ s/\s+$//s;
+$content =~ s/\s+/ /gs;
+is( $content, "Auto-generated list of places in Farringdon: "
+              . "\@INDEX_LIST [[Locale Farringdon]]",
+    "...and locales" );
+
+# Now make sure that we have a fallback if there's no autocreate template.
+unlink cwd . "/t/templates/custom_autocreate_content.tt";
+
+OpenGuides::Test->write_data(
+                              guide => $guide,
+                              node  => "Bleeding Heart",
+                              categories => "Pubs",
+                            );
+$content = $wiki->retrieve_node( "Category Pubs" );
+$content =~ s/\s+$//s;
+$content =~ s/\s+/ /gs;
+is( $content, "\@INDEX_LINK [[Category Pubs]]",
+    "Default content is picked up if autocreate template doesn't exist" );
